@@ -244,22 +244,24 @@ objc_demangle (const char *mangled, int options)
 	  xfree(demangled);	/* not mangled name */
 	  return NULL;
 	}
-      if (cp[1] == '_') {	/* easy case: no category name     */
-	*cp++ = ' ';		/* replace two '_' with one ' '    */
-	strcpy(cp, mangled + (cp - demangled) + 2);
-      }
-      else {
-	*cp++ = '(';		/* less easy case: category name */
-	cp = strchr(cp, '_');
-	if (!cp)
-	  {
-	    xfree(demangled);	/* not mangled name */
-	    return NULL;
-	  }
-	*cp++ = ')';
-	*cp++ = ' ';		/* overwriting 1st char of method name...  */
-	strcpy(cp, mangled + (cp - demangled));	/* get it back */
-      }
+      if (cp[1] == '_')		/* easy case: no category name     */
+	{
+	  *cp++ = ' ';		/* replace two '_' with one ' '    */
+	  strcpy(cp, mangled + (cp - demangled) + 2);
+	}
+      else
+	{
+	  *cp++ = '(';		/* less easy case: category name */
+	  cp = strchr(cp, '_');
+	  if (!cp)
+	    {
+	      xfree(demangled);	/* not mangled name */
+	      return NULL;
+	    }
+	  *cp++ = ')';
+	  *cp++ = ' ';		/* overwriting 1st char of method name...  */
+	  strcpy(cp, mangled + (cp - demangled));	/* get it back */
+	}
 
       while (*cp && *cp == '_')
 	cp++;			/* skip any initial underbars in method name */
@@ -283,7 +285,6 @@ objc_demangle (const char *mangled, int options)
 static void
 objc_emit_char (int c, struct type *type, struct ui_file *stream, int quoter)
 {
-
   c &= 0xFF;			/* Avoid sign bit follies.  */
 
   if (PRINT_LITERAL_FORM (c))
@@ -574,28 +575,34 @@ add_msglist(struct stoken *str, int addcolon)
   char *s, *p;
   int len, plen;
 
-  if (str == 0) {		/* Unnamed arg, or...  */
-    if (addcolon == 0) {	/* variable number of args.  */
-      msglist_len++;
-      return;
+  if (str == 0)			/* Unnamed arg, or...  */
+    {
+      if (addcolon == 0)	/* variable number of args.  */
+	{
+	  msglist_len++;
+	  return;
+	}
+      p = "";
+      plen = 0;
     }
-    p = "";
-    plen = 0;
-  } else {
-    p = str->ptr;
-    plen = str->length;
-  }
+  else
+    {
+      p = str->ptr;
+      plen = str->length;
+    }
   len = plen + strlen(msglist_sel) + 2;
   s = (char *)xmalloc(len);
   strcpy(s, msglist_sel);
   strncat(s, p, plen);
   xfree(msglist_sel);
   msglist_sel = s;
-  if (addcolon) {
-    s[len-2] = ':';
-    s[len-1] = 0;
-    msglist_len++;
-  } else
+  if (addcolon)
+    {
+      s[len-2] = ':';
+      s[len-1] = 0;
+      msglist_len++;
+    }
+  else
     s[len-2] = '\0';
 }
 
@@ -993,17 +1000,18 @@ parse_selector (char *method, char **selector)
   nselector = s1;
   s2 = s1;
 
-  for (;;) {
-    if (isalnum (*s2) || (*s2 == '_') || (*s2 == ':'))
-      *s1++ = *s2;
-    else if (isspace (*s2))
-      ;
-    else if ((*s2 == '\0') || (*s2 == '\''))
-      break;
-    else
-      return NULL;
-    s2++;
-  }
+  for (;;)
+    {
+      if (isalnum (*s2) || (*s2 == '_') || (*s2 == ':'))
+	*s1++ = *s2;
+      else if (isspace (*s2))
+	;
+      else if ((*s2 == '\0') || (*s2 == '\''))
+	break;
+      else
+	return NULL;
+      s2++;
+    }
   *s1++ = '\0';
 
   while (isspace (*s2))
@@ -1087,17 +1095,18 @@ parse_method (char *method, char *type, char **class,
   nselector = s2;
   s1 = s2;
 
-  for (;;) {
-    if (isalnum (*s2) || (*s2 == '_') || (*s2 == ':'))
-      *s1++ = *s2;
-    else if (isspace (*s2))
-      ;
-    else if (*s2 == ']')
-      break;
-    else
-      return NULL;
-    s2++;
-  }
+  for (;;)
+    {
+      if (isalnum (*s2) || (*s2 == '_') || (*s2 == ':'))
+	*s1++ = *s2;
+      else if (isspace (*s2))
+	;
+      else if (*s2 == ']')
+	break;
+      else
+	return NULL;
+      s2++;
+    }
   *s1++ = '\0';
   s2++;
 
@@ -1308,36 +1317,36 @@ char *find_imps (struct symtab *symtab, struct block *block,
   strcpy (buf, method);
   tmp = parse_method (buf, &type, &class, &category, &selector);
 
-  if (tmp == NULL) {
-    
-    struct symbol *sym = NULL;
-    struct minimal_symbol *msym = NULL;
-    
-    strcpy (buf, method);
-    tmp = parse_selector (buf, &selector);
-    
-    if (tmp == NULL)
-      return NULL;
-    
-    sym = lookup_symbol (selector, block, VAR_DOMAIN, 0);
-    if (sym != NULL) 
-      {
-	if (syms)
-	  syms[csym] = sym;
-	csym++;
-	cdebug++;
-      }
+  if (tmp == NULL)
+    {
+      struct symbol *sym = NULL;
+      struct minimal_symbol *msym = NULL;
 
-    if (sym == NULL)
-      msym = lookup_minimal_symbol (selector, 0, 0);
+      strcpy (buf, method);
+      tmp = parse_selector (buf, &selector);
 
-    if (msym != NULL) 
-      {
-	if (syms)
-	  syms[csym] = (struct symbol *)msym;
-	csym++;
-      }
-  }
+      if (tmp == NULL)
+	return NULL;
+
+      sym = lookup_symbol (selector, block, VAR_DOMAIN, 0);
+      if (sym != NULL) 
+	{
+	  if (syms)
+	    syms[csym] = sym;
+	  csym++;
+	  cdebug++;
+	}
+
+      if (sym == NULL)
+	msym = lookup_minimal_symbol (selector, 0, 0);
+
+      if (msym != NULL) 
+	{
+	  if (syms)
+	    syms[csym] = (struct symbol *)msym;
+	  csym++;
+	}
+    }
 
   if (syms != NULL)
     find_methods (symtab, type, class, category, selector, 
@@ -1499,26 +1508,29 @@ static void
 find_objc_msgsend (void)
 {
   unsigned int i;
-  for (i = 0; i < nmethcalls; i++) {
 
-    struct minimal_symbol *func;
+  for (i = 0; i < nmethcalls; i++)
+    {
+      struct minimal_symbol *func;
 
-    /* Try both with and without underscore.  */
-    func = lookup_minimal_symbol (methcalls[i].name, NULL, NULL);
-    if ((func == NULL) && (methcalls[i].name[0] == '_')) {
-      func = lookup_minimal_symbol (methcalls[i].name + 1, NULL, NULL);
+      /* Try both with and without underscore.  */
+      func = lookup_minimal_symbol (methcalls[i].name, NULL, NULL);
+      if ((func == NULL) && (methcalls[i].name[0] == '_'))
+	{
+	  func = lookup_minimal_symbol (methcalls[i].name + 1, NULL, NULL);
+	}
+      if (func == NULL)
+	{ 
+	  methcalls[i].begin = 0;
+	  methcalls[i].end = 0;
+	  continue; 
+	}
+
+      methcalls[i].begin = SYMBOL_VALUE_ADDRESS (func);
+      do {
+	methcalls[i].end = SYMBOL_VALUE_ADDRESS (++func);
+      } while (methcalls[i].begin == methcalls[i].end);
     }
-    if (func == NULL) { 
-      methcalls[i].begin = 0;
-      methcalls[i].end = 0;
-      continue; 
-    }
-    
-    methcalls[i].begin = SYMBOL_VALUE_ADDRESS (func);
-    do {
-      methcalls[i].end = SYMBOL_VALUE_ADDRESS (++func);
-    } while (methcalls[i].begin == methcalls[i].end);
-  }
 }
 
 /* find_objc_msgcall (replaces pc_off_limits)
@@ -1618,6 +1630,7 @@ read_objc_method (struct gdbarch *gdbarch, CORE_ADDR addr,
 		  struct objc_method *method)
 {
   enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
+
   method->name  = read_memory_unsigned_integer (addr + 0, 4, byte_order);
   method->types = read_memory_unsigned_integer (addr + 4, 4, byte_order);
   method->imp   = read_memory_unsigned_integer (addr + 8, 4, byte_order);
@@ -1627,6 +1640,7 @@ static unsigned long
 read_objc_methlist_nmethods (struct gdbarch *gdbarch, CORE_ADDR addr)
 {
   enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
+
   return read_memory_unsigned_integer (addr + 4, 4, byte_order);
 }
 
@@ -1643,6 +1657,7 @@ read_objc_object (struct gdbarch *gdbarch, CORE_ADDR addr,
 		  struct objc_object *object)
 {
   enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
+
   object->isa = read_memory_unsigned_integer (addr, 4, byte_order);
 }
 
@@ -1651,6 +1666,7 @@ read_objc_super (struct gdbarch *gdbarch, CORE_ADDR addr,
 		 struct objc_super *super)
 {
   enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
+
   super->receiver = read_memory_unsigned_integer (addr, 4, byte_order);
   super->class = read_memory_unsigned_integer (addr + 4, 4, byte_order);
 };
@@ -1660,6 +1676,7 @@ read_objc_class (struct gdbarch *gdbarch, CORE_ADDR addr,
 		 struct objc_class *class)
 {
   enum bfd_endian byte_order = gdbarch_byte_order (gdbarch);
+
   class->isa = read_memory_unsigned_integer (addr, 4, byte_order);
   class->super_class = read_memory_unsigned_integer (addr + 4, 4, byte_order);
   class->name = read_memory_unsigned_integer (addr + 8, 4, byte_order);
@@ -1704,8 +1721,8 @@ find_implementation_from_class (struct gdbarch *gdbarch,
 	  for (i = 0; i < nmethods; i++) 
 	    {
 	      struct objc_method meth_str;
-	      read_objc_methlist_method (gdbarch, mlist, i, &meth_str);
 
+	      read_objc_methlist_method (gdbarch, mlist, i, &meth_str);
 #if 0
 	      fprintf (stderr, 
 		       "checking method 0x%lx against selector 0x%lx\n", 
